--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'GitHub File Sync'
+name: 'Repo File Sync Action'
 description: 'GitHub Action to Sync Files like Workflows Between Repositories.'
 author: 'BetaHuhn'
 
