--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,11 @@
 blank_issues_enabled: false
 contact_links:
   - name: 📚 Docs
-    url: https://github.com/BetaHuhn/action-github-file-sync#-usage
-    about: Checkout action-github-file-sync's documentation.
+    url: https://github.com/BetaHuhn/repo-file-sync-action#-usage
+    about: Checkout repo-file-sync-action's documentation.
   - name: 🚀 Feature Request
-    url: https://github.com/BetaHuhn/action-github-file-sync/discussions/new?category=ideas
+    url: https://github.com/BetaHuhn/repo-file-sync-action/discussions/new?category=ideas
     about: Share ideas for new features
   - name: ❓ Ask a Question
-    url: https://github.com/BetaHuhn/action-github-file-sync/discussions/new?category=q-a
+    url: https://github.com/BetaHuhn/repo-file-sync-action/discussions/new?category=q-a
     about: Ask the community for help
