--- a/action.yml
+++ b/action.yml
@@ -51,6 +51,10 @@ inputs:
     description: |
       Overwrite any existing Sync PR with the new changes. Defaults to true
     required: false
+  SKIP_PR:
+    description: |
+      Skips creating a Pull Request and pushes directly to the default branch. Defaults to false
+    required: false
 
 runs:
   using: 'node12'
