--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   "dependencies": {
     "@actions/core": "^1.2.7",
     "@actions/github": "^2.2.0",
-    "@actions/io": "^1.1.0",
     "@putout/git-status-porcelain": "^1.1.0",
     "dotenv": "^8.2.0",
+    "fs-extra": "^9.1.0",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
