✨ Add branch prefix option #32

--- a/action.yml
+++ b/action.yml
@@ -55,6 +55,10 @@ inputs:
     description: |
       Skips creating a Pull Request and pushes directly to the default branch. Defaults to false
     required: false
+  BRANCH_PREFIX:
+    description: |
+      Specify a different prefix for the new branch in the target repo. Defaults to repo-sync/SOURCE_REPO_NAME
+    required: false
 
 runs:
   using: 'node12'
