--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@actions/core": "^1.2.7",
     "@actions/github": "^2.2.0",
     "@putout/git-status-porcelain": "^1.1.0",
-    "dotenv": "^8.2.0",
+    "action-input-parser": "^1.0.1",
     "fs-extra": "^9.1.0",
     "js-yaml": "^4.1.0"
   },
