--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@actions/core": "^1.3.0",
     "@actions/github": "^5.0.0",
+    "@octokit/plugin-throttling": "^3.4.1",
     "@putout/git-status-porcelain": "^1.1.0",
     "action-input-parser": "^1.2.1",
     "fs-extra": "^10.0.0",
