--- a/action.yml
+++ b/action.yml
@@ -67,6 +67,10 @@ inputs:
     description: |
       Re-use the original commit message for commits. Works only if the action is triggered by pushing one commit. Defaults to false
     required: false
+  COMMIT_AS_PR_TITLE:
+    description: |
+      Re-use the commit message as PR title. Works only if ORIGINAL_MESSAGE is on and PR has one commit. Defaults to false
+    required: false
   SKIP_PR:
     description: |
       Skips creating a Pull Request and pushes directly to the default branch. Defaults to false
