--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@betahuhn/config": "^1.2.0",
+    "@octokit/core": "^3.5.1",
     "@vercel/ncc": "^0.31.1",
     "eslint": "^7.32.0"
   }
