--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "action-input-parser": "^1.2.31",
     "fs-extra": "^10.1.0",
     "js-yaml": "^4.1.0",
+    "mustache": "^4.2.0",
     "node-readfiles": "^0.2.0"
   },
   "devDependencies": {
