add licenses, minify dist

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "lint": "eslint ./src",
     "start": "node src/index.js",
-    "build": "ncc build src/index.js -o dist"
+    "build": "ncc build src/index.js -o dist -m --license licenses.txt"
   },
   "repository": {
     "type": "git",
