♻️ Move to ESM (#288)
* fix: ignore `.git` folder when checking orphaned files

* ncc

* chore: move to ESM

* less line change

* ncc

* format

* add licenses, minify dist

* rebuild dist

Co-authored-by: BetaHuhn <schiller@mxis.ch>

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.19.1",
   "description": "GitHub Action to keep files like Action workflows or entire directories in sync between multiple repositories.",
   "main": "dist/index.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint ./src",
     "start": "node src/index.js",
-    "build": "ncc build src/index.js -o dist"
+    "build": "ncc build src/index.js -o dist -m --license licenses.txt"
   },
   "repository": {
     "type": "git",
