chore: synced local '.github/dependabot.yml' with remote '.github/dependabot.yml'

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,10 +1,37 @@
+# file is synced from cove-workflow
+
 version: 2
+registries:
+  npm-npmjs:
+    type: npm-registry
+    url: https://registry.npmjs.org
+    token: ${{ secrets.NPM_TOKEN_READ_ONLY }}
 updates:
-  - package-ecosystem: "npm"
-    directory: "/"
-    schedule:
-      interval: "daily"
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
+    commit-message:
+      prefix: chore
+      prefix-development: chore
+    groups:
+      all:
+        update-types:
+          - "major"
+          - "minor"
+          - "patch"
+  - package-ecosystem: "npm"
+    directory: "/"
+    registries:
+      - npm-npmjs
+    schedule:
+      interval: "weekly"
+    commit-message:
+      prefix: chore
+      prefix-development: chore
+    groups:
+      dev-dependencies:
+        dependency-type: "development"
+        update-types:
+          - "minor"
+          - "patch"
